--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,3 @@
-HELP.md
-mvnw
-mvnw.cmd
-
 target/
-.mvn/*
-!**/src/main/**
-!**/src/test/**
-
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-
-### VS Code ###
-.vscode/
-
 /.idea
+/*.iml
